version/0.30/_sources/api/solver/_autosummary/settings/interfaces_child.rst.txt
:orphan:

.. _interfaces_child:

interfaces_child
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.interfaces_child
    :show-inheritance:

.. rubric:: Attributes

============================================   ========================================

Attribute                                                                       Summary

============================================   ========================================
:ref:`name <name_9>`                               The prefix for mesh interface names.

:ref:`type <type_6>`                                                    Interface type.

:ref:`boundary_1 <boundary_1_2>`                             Interface side-1 boundary.

:ref:`boundary_2 <boundary_2_1>`                             Interface side-2 boundary.

:ref:`periodicity <periodicity>`                            Interface periodicity type.

:ref:`mesh_connectivity <mesh_connectivity>`          Interface mesh connectivity type.

============================================   ========================================

.. rubric:: Included in:

==============================   ==================================

Parent                                                      Summary

==============================   ==================================
:ref:`interfaces <interfaces>`       Physics interface definitions.

==============================   ==================================

